# CppJunction

./: .gitignore  CMakeLists.txt  library.h
include/: Collection.h  TreeSet.h
include/TreeSet/: TreeNode.h  TreeSet.h
src/: TreeSet.cpp
test/: TreeSetTest.cpp  test.cpp
